--- a/2.html
+++ b/2.html
@@ -2,14 +2,51 @@
 <head>
   <title>식단</title>
   <meta charset="utf-8">
+  <style>
+    body{
+      margin:0;
+    }
+    a {
+      color:black;
+      text-decoration: none;
+    }
+    h1 {
+      font-size:45px;
+      text-align: center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;
+    }
+    ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0;
+      padding:20px;
+    }
+    #grid{
+      display: grid;
+      grid-template-columns: 150px 1fr;
+    }
+    #grid ol{
+      padding-left:33px;
+    }
+    #grid #article{
+      padding-left:25px;
+    }
+  </style>
+ </head>
+ <body>
+ <h1>격리 공지</h1>
+ <div id="grid">
+ <ol>
+   <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성 방법</a></p></li>
+   <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">식단</a></p></li>
+   <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁물 요금표</a></li>
+ </ol>
+     <div id="article">
 </head>
 <body>
-<h1>격리 공지</h1>
-<ol>
-  <li><a href="1.html" title="documents">서류작성 방법</a></p></li>
-  <li><a href="2.html" title="meals">식단</a></p></li>
-  <li><a href="3.html" title="loundry_price">세탁물 요금표</a></li>
-</ol><h2>식단</h2><p><h3>식사제공 시간</h3>
+<h2>식단</h2><p><h3>식사제공 시간</h3>
 <li>아침식사 07시~09시 </li>
 <li>점심식사 12시~ 13시 </li>
 <li>저녁 18시~19시 </li>
