--- a/index.html
+++ b/index.html
@@ -2,14 +2,48 @@
 <head>
   <title>호치민 한인회 특별입국 공지사항</title>
   <meta charset="utf-8">
+ <style>
+   body{
+     margin:0;
+   }
+   a {
+     color:black;
+     text-decoration: none;
+   }
+   h1 {
+     font-size:45px;
+     text-align: center;
+     border-bottom:1px solid gray;
+     margin:0;
+     padding:20px;
+   }
+   ol{
+     border-right:1px solid gray;
+     width:100px;
+     margin:0;
+     padding:20px;
+   }
+   #grid{
+     display: grid;
+     grid-template-columns: 150px 1fr;
+   }
+   #grid ol{
+     padding-left:33px;
+   }
+   #grid #article{
+     padding-left:25px;
+   }
+ </style>
 </head>
 <body>
 <h1>격리 공지</h1>
+<div id="grid">
 <ol>
   <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성 방법</a></p></li>
   <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">식단</a></p></li>
   <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁물 요금표</a></li>
 </ol>
+    <div id="article">
   <h2>체크인시에는 요청사항이 많아, 호텔 측의 빠른 대응이 어렵습니다. 요청사항은 호텔에서 순차적으로 정해드릴 예정이니 잠시 후 다시 요청 부탁드립니다.</h2><h3>객실에 준비된 스낵 박스는 격리기간 동안 부식으로 드실 수 있게 한인회에서 제공 하였습니다.</h3><p style="margin-top:45px;"></p><p><h3>화재 경보 시스템으로 담배 연기가 화재로 인식(절대금연-화재경보시 대피절차 진행시 격리기간에 지장이 있을 수 있습니다.)흡연하신 방은 체크 아웃시 적발될 경우 데이당 300만동으로 계산하여, 전체 숙박기간동안(15일 총 4500만동)의 벌금이 부과될 수 있습니다. 이부분 꼭 숙지하여 주시기 바랍니다.</h3></p>
 <h3>와이파이 이용법</h3>
 <h4>1. 방법1</h4>
