--- a/2.html
+++ b/2.html
@@ -36,7 +36,7 @@
   </style>
  </head>
  <body>
- <h1>격리 공지</h1>
+<h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
  <div id="grid">
  <ol>
    <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성 방법</a></p></li>
