--- a/3.html
+++ b/3.html
@@ -7,11 +7,14 @@
  <body>
 <h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
  <div id="grid">
- <ol>
-   <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성 방법</a></p></li>
-   <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">식단</a></p></li>
-   <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁물 요금표</a></li>
- </ol>
+   <ol>
+     <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성 방법</a></p></li>
+     <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">식단</a></p></li>
+     <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁물 요금표</a></p></li>
+     <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소와 환기</a></p></li>
+     <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">보건국과 호텔 규정</a></p></li>
+     <li><a href="6.html" title="요청사항에 대한 안내입니다.">기타 요청사항</a></p></li>
+   </ol>
      <div id="article">
 </head>
 <body>
@@ -19,6 +22,10 @@
   <div style="text-align:center;">
     <img src="loundry_price.png" style="max-width:100%;height:auto;">
   </div>
+<p>
+<h3>세탁물 관련</h3>
+<li>세탁물은 입실 3일 후 12시 부터 맡기실 수 있습니다.</li>
+<li>세탁물은 하루 2피스(2개)/객실당 까지 무료 제공하고, 그 이상은 금액 지불 하여야 합니다.</li>
 <p>
 <li>세탁물은 매일 낮 12시에 전달과 수거를 하고, 수거한 세탁물은 세탁하여 2일뒤 12시에 전달 드립니다.</li>
 <li>세탁물 맏기실때 증거/드라이 요청시 옷이 변질될 수 있으니 가급적 피해 주시고, 운동화는 세탁이 불가능 합니다.</li>
