--- a/2.html
+++ b/2.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <title>식단</title>
+  <title>전체식단</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
  </head>
@@ -8,17 +8,17 @@
 <h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
  <div id="grid">
    <ol>
-     <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성 방법</a></p></li>
-     <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">식단</a></p></li>
-     <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁물 요금표</a></p></li>
-     <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소와 환기</a></p></li>
-     <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">보건국과 호텔 규정</a></p></li>
-     <li><a href="6.html" title="요청사항에 대한 안내입니다.">기타 요청사항</a></p></li>
+     <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></p></li>
+     <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></p></li>
+     <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></p></li>
+     <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소/환기</a></p></li>
+     <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></p></li>
+     <li><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></p></li>
    </ol>
      <div id="article">
 </head>
 <body>
-<h2>식단</h2><p><h3>식사제공 시간</h3>
+<h2>전체식단</h2><p><h3>식사제공 시간</h3>
 <li>아침식사 07시~09시 </li>
 <li>점심식사 12시~ 13시 </li>
 <li>저녁 18시~19시 </li>
