--- a/5.html
+++ b/5.html
@@ -8,31 +8,31 @@
 <h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
  <div id="grid">
    <ol>
-     <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성 방법</a></p></li>
-     <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">식단</a></p></li>
-     <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁물 요금표</a></p></li>
-     <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소와 환기</a></p></li>
-     <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">보건국과 호텔 규정</a></p></li>
-     <li><a href="6.html" title="요청사항에 대한 안내입니다.">기타 요청사항</a></p></li>
+     <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></p></li>
+     <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></p></li>
+     <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></p></li>
+     <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소/환기</a></p></li>
+     <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></p></li>
+     <li><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></p></li>
    </ol>
      <div id="article">
 </head>
 <body>
-  <h3>보건국 규정</h3>
+  <h2>보건국 규정</h2>
   <li>코로나 검사는 격리기간 동안, 총 2번(체크인 1일 후, 체크아웃 1일 전) 진행됩니다.</li>
   <li>이는 보건국의 방침에 따라 변경 될 수 있습니다.</li>
   <li>호텔 안내를 통해 정해진 공간에서 진행하여 주세요.</li>
-  <h3>호텔 규정</h3>
+  <h2>호텔 규정</h2>
   <li>호텔 요청에 의한 이동 외에 객실에서 나오실 경우(별도 코로나 검사등, 호텔에서 통제하는 경우를 제외한), 격리규정 문제로 구찌격리시설로 이송 됩니다. 이 경우 격리기간이 다시 초기화되고 구찌격리시설의 비용이 청구될 수 있습니다. 현 격리 호텔의 환불은 불가하오니 각별히 신경 써주시기 바랍니다.</li>
   <li>흡연하는 객실 또한 적발시 퇴실조치 후 집중 격리 시설로 이송되실 수 있습니다.</li>
   <li>화재 경보 시스템으로 담배 연기가 화재로 인식(절대금연-화재경보시 대피절차 진행시 격리기간에 지장이 있을 수 있습니다.)</li>
   <li>각방에 온도계와 작성 서류(만약 없다면, 로비에 요청하여 주세요)가 준비되어 있습니다. 매일 열을 체크하여 주시고 해당 문서에 기록해 주세요. 체크 아웃시에 이 문서를 제출하여야 격리 해제 됩니다. 혹시 온도계가 없으신 분들은 리셉션에 요청해 주세요.</li>
   <li>객실 온도는 호치민 보건국의 규정에 따라 26도 아래로의 온도 조절이 불가 합니다.</li>
-  <h3>호텔 시설문 파손, 분실 등에 대한 변상</h3>
+  <h2>호텔 시설문 파손, 분실 등에 대한 변상</h2>
   <li>온도계는 퇴실시 로비 카운터에 제출하셔야 하며, 파손이나 분실시 고객이 변상하셔야 합니다.</li>
   <li>흡연하신 방은 체크 아웃시 적발될 경우 데이당 300만동으로 계산하여, 전체 숙박기간동안(15일 총 4500만동)의 벌금이 부과될 수 있습니다. 이부분 꼭 숙지하여 주시기 바랍니다.</li>
   <li>호텔 체크인후 파손된 제품이 잇을시 바로 로비에 확인요청 해주세요. 추후 체크아웃시 호텔에서 변상요구할수있습니다.</li>
-  <h3>규정</h3>
+  <h2>규정</h2>
   <li>격리해제 시간은 해제일 당일 보건국의 승인을 받은 후에 안내 됩니다.</li>
   <li>이부분 사전 문의 주셔도 확인이 불가하기 때문에 격리 해제 당일 안내에 따라 체크아웃을 진행 해주세요</li>
   <li>격리기간 : 15일 (베트남 정부 규정 - 360시간) / 객실 외부 출입 통제됨 (공안 상주)</li>
