--- a/6.html
+++ b/6.html
@@ -8,17 +8,17 @@
 <h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
  <div id="grid">
    <ol>
-     <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성 방법</a></p></li>
-     <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">식단</a></p></li>
-     <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁물 요금표</a></p></li>
-     <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소와 환기</a></p></li>
-     <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">보건국과 호텔 규정</a></p></li>
-     <li><a href="6.html" title="요청사항에 대한 안내입니다.">기타 요청사항</a></p></li>
+     <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></p></li>
+     <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></p></li>
+     <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></p></li>
+     <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소/환기</a></p></li>
+     <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></p></li>
+     <li><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></p></li>
    </ol>
      <div id="article">
 </head>
 <body>
-  <h3>요청사항</h3>
+  <h2>요청사항</h2>
   <li>수다/공지 단톡방은 실시간 모니터링을 하지 않습니다.</li>
   <li>문의 사항은 http://pf.kakao.com/_NxosKK 격리 문의 채널을 이용하여 주세요.</li>
   <li>객실내의 시설물이 작동하지 않거나 문제가 있을 경우 호텔에 요청하시면 판단하여 수리 또는 객실변경이 진행됩니다.</li>
