--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
+<h1 href="index.html" title="홈으로 가기">격리 공지</h1>
 <div id="grid">
-<ol>
-  <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성 방법</a></p></li>
-  <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">식단</a></p></li>
-  <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁물 요금표</a></p></li>
-  <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소와 환기</a></p></li>
-  <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">보건국과 호텔 규정</a></p></li>
-  <li><a href="6.html" title="요청사항에 대한 안내입니다.">기타 요청사항</a></p></li>
-</ol>
+  <ol>
+    <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></p></li>
+    <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></p></li>
+    <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></p></li>
+    <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소/환기</a></p></li>
+    <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></p></li>
+    <li><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></p></li>
+  </ol>
     <div id="article">
-  <h2>체크인시에는 요청사항이 많아, 호텔 측의 빠른 대응이 어렵습니다. 요청사항은 호텔에서 순차적으로 정해드릴 예정이니 잠시 후 다시 요청 부탁드립니다.</h2><h3>객실에 준비된 스낵 박스는 격리기간 동안 부식으로 드실 수 있게 한인회에서 제공 하였습니다.</h3><p style="margin-top:45px;"></p><p><h3>화재 경보 시스템으로 담배 연기가 화재로 인식(절대금연-화재경보시 대피절차 진행시 격리기간에 지장이 있을 수 있습니다.)흡연하신 방은 체크 아웃시 적발될 경우 데이당 300만동으로 계산하여, 전체 숙박기간동안(15일 총 4500만동)의 벌금이 부과될 수 있습니다. 이부분 꼭 숙지하여 주시기 바랍니다.</h3></p>
-<h3>와이파이 이용법</h3>
-<h4>1. 방법1</h4>
+  <h2>체크인시에는 요청사항이 많아, 호텔 측의 빠른 대응이 어렵습니다. 요청사항은 호텔에서 순차적으로 정해드릴 예정이니 잠시 후 다시 요청 부탁드립니다.</h2>
+  <h2>객실에 준비된 스낵 박스는 격리기간 동안 부식으로 드실 수 있게 한인회에서 제공 하였습니다.</h2><p style="margin-top:45px;"></p><p>
+  <h2>화재 경보 시스템으로 담배 연기가 화재로 인식(절대금연-화재경보시 대피절차 진행시 격리기간에 지장이 있을 수 있습니다.)흡연하신 방은 체크 아웃시 적발될 경우 데이당 300만동으로 계산하여, 전체 숙박기간동안(15일 총 4500만동)의 벌금이 부과될 수 있습니다. 이부분 꼭 숙지하여 주시기 바랍니다.</h2></p>
+<h2>와이파이 이용법</h2>
+<h3>1. 방법1</h3>
 <li>Ihg connect 연결</li>
 <li>Use access code 클릭</li>
 <li>Sgnsa 기입</li>
 <li>Connect to wi fi 클릭</li>
-<h4>2. 방법2</h4>
+<h3>2. 방법2</h3>
 <li>밑에 객실이용 사용자 이름, 방번호 쓰면 이용 가능</li>
 </body>
