--- a/2.html
+++ b/2.html
@@ -17,13 +17,13 @@
    </ol>
      <div id="article">
 </head>
-<body>
-<h2>전체식단</h2><p><h3>식사제공 시간</h3>
+<body><h2>식사제공 시간</h2>
 <li>아침식사 07시~09시 </li>
 <li>점심식사 12시~ 13시 </li>
 <li>저녁 18시~19시 </li>
+<h2>전체식단</h2>
 <a href="https://www.notion.so/vvookk/8c460cfea3bc464fac71072b714cf5a4" target="_blank" title="호텔 조식 신청 방법"></a>
-</p><p><div style="text-align:center;">
+<p><div style="text-align:center;">
     <img src="menu.png" style="max-width:100%;height:auto;">
   </div>
 </body>
