--- a/1.html
+++ b/1.html
@@ -15,8 +15,10 @@
      <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></p></li>
      <li><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></p></li>
    </ol>
-     <div id="article">
+  <div id="article">
 <h2>서류 작성 방법</h2>
+<li>각방에 온도계와 작성 서류(만약 없다면, 로비에 요청하여 주세요)가 준비되어 있습니다. 매일 열을 체크하여 주시고 해당 문서에 기록해 주세요. 체크 아웃시에 이 문서를 제출하여야 격리 해제 됩니다. 혹시 온도계가 없으신 분들은 리셉션에 요청해 주세요.</li>
+  <li>온도계는 퇴실시 로비 카운터에 제출하셔야 하며, 파손이나 분실시 고객이 변상하셔야 합니다.</li>
 <div style="text-align:center;">
   <img src="doc1.jpg" style="max-width:100%;height:auto;">
     <img src="doc2.jpg" style="max-width:100%;height:auto;">
