--- a/2.html
+++ b/2.html
@@ -38,9 +38,13 @@
 <td>중식</td><td>낙지볶음, 콩나물국, 버섯탕수육, 브로컬리, 단호박셀러드, 김치</td><td>아리랑</td></tr>
 <td>석식</td><td>커레라이스, 단무지무침, 장아찌, 양상추샐러드, 냉국</td><td>최고집</td></tr>
 <tr><td></td></tr>
-<tr><td>3일차</td><td>3월 30일</td><td>조식</td><td>호텔식</td><td>호텔</td></tr>
-<tr><td></td><td></td><td>중식</td><td>비빔밥, 소고기무국, 꼬막무침, 겉저리김치, 소세지야채볶음, 떡볶이</td><td>아리랑</td></tr>
-<tr><td></td><td></td><td>석식</td><td>돼지간장불고기, 오징어초무침, 달걀찜, 가지굴소스볶음, 된장국</td><td>최고집</td></tr>
+<tr>
+  <td>3일차</td>
+  <td>3월 30일</td>
+  <td>조식</td><td>호텔식</td><td>호텔</td></tr>
+<tr>
+<td>중식</td><td>비빔밥, 소고기무국, 꼬막무침, 겉저리김치, 소세지야채볶음, 떡볶이</td><td>아리랑</td></tr>
+<td>석식</td><td>돼지간장불고기, 오징어초무침, 달걀찜, 가지굴소스볶음, 된장국</td><td>최고집</td></tr>
 <tr><td></td></tr>
 <tr><td>4일차</td><td>3월 31일</td><td>조식</td><td>호텔식</td><td>호텔</td></tr>
 <tr><td></td><td></td><td>중식</td><td>김치찌개, 깍두기, 깻잎전, 감자 샐러드, 장조림</td><td>아리랑</td></tr>
