--- a/2.html
+++ b/2.html
@@ -39,8 +39,8 @@
 <td>석식</td><td>커레라이스, 단무지무침, 장아찌, 양상추샐러드, 냉국</td><td>최고집</td></tr>
 <tr><td></td></tr>
 <tr>
-  <td>3일차</td>
-  <td>3월 30일</td>
+  <td rowspan="3" align = "center">3일차</td>
+  <td rowspan="3" align = "center">3월 30일</td>
   <td>조식</td><td>호텔식</td><td>호텔</td></tr>
 <tr>
 <td>중식</td><td>비빔밥, 소고기무국, 꼬막무침, 겉저리김치, 소세지야채볶음, 떡볶이</td><td>아리랑</td></tr>
