fixed menu on top

--- a/2.html
+++ b/2.html
@@ -1,35 +1,35 @@
 <!doctype html>
 <head>
-  <title>전체식단</title>
+  <title>호치민 한인회 특별입국 공지사항</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
- </head>
- <body>
-<h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
- <div id="grid">
-   <ol>
-     <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></p></li>
-     <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></p></li>
-     <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></p></li>
-     <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소/환기</a></p></li>
-     <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></p></li>
-     <li><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></p></li>
-   </ol>
-     <div id="article">
 </head>
+<body>
+<header>
+<h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
+    <nav>
+      <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span>
+      <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span>
+      <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span>
+      <span><a href="4.html" title="청소, 환기 관련 안내입니다.">청소/환기</a></span>
+      <span><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></span>
+      <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
+    </nav>
+</header>
 <body><h2>식사제공 시간</h2>
 <li>아침식사 07시~09시 </li>
 <li>점심식사 12시~ 13시 </li>
 <li>저녁 18시~19시 </li>
 <h2>전체식단</h2>
-<table border="1">
-  <tr><th>일차</th><th>날짜</th><th>구분</th><th>메뉴</th><th>제공업체</th></tr>
+<table border="EUC-KR">
+  <table class="__se_tbl_ext" border="1" style="border-collapse: collapse; width: auto;">
+  <tr>
+    <th>일차</th><th>날짜</th><th>구분</th><th>메뉴</th><th>제공업체</th></tr>
 <tr>
   <td rowspan="3" align = "center">1일차</td>
   <td rowspan="3" align = "center">3/28</td><td>조식</td><td>X</td><td>X</td></tr>
 <tr><td>중식</td><td>X</td><td>X</td></tr>
 <tr><td>석식</td><td>제육볶음, 멸치땅콩조림, 느타리버섯볶음, 해물파전, 미역국</td><td>최고집</td></tr>
-<tr>
 <tr>
   <td rowspan="3" align = "center">2일차</td>
   <td rowspan="3" align = "center">3/29</td>
@@ -37,7 +37,6 @@
 <tr>
 <td>중식</td><td>낙지볶음, 콩나물국, 버섯탕수육, 브로컬리, 단호박셀러드, 김치</td><td>아리랑</td></tr>
 <td>석식</td><td>커레라이스, 단무지무침, 장아찌, 양상추샐러드, 냉국</td><td>최고집</td></tr>
-<tr>
 <tr>
   <td rowspan="3" align = "center">3일차</td>
   <td rowspan="3" align = "center">3/30</td>
@@ -101,7 +100,8 @@
 <td>중식</td><td>김밥, 시래기국, 고등어조림, 오이무침</td><td>대어</td></tr>
 <td>석식</td><td>김치국, 주무럭, 생선, 부추전, 김치</td><td>방도남</td></tr>
 <tr>
-  <td rowspan="3" align = "center">15일차</td>  <td rowspan="3" align = "center">4/11</td><td>조식</td><td>호텔식</td><td>호텔</td></tr>
+  <td rowspan="3" align = "center">15일차</td>
+  <td rowspan="3" align = "center">4/11</td><td>조식</td><td>호텔식</td><td>호텔</td></tr>
 </table>
 <a href="https://www.notion.so/vvookk/8c460cfea3bc464fac71072b714cf5a4" target="_blank" title="호텔 조식 신청 방법"></a>
 <p><div style="text-align:center;">
