--- a/3.html
+++ b/3.html
@@ -1,22 +1,21 @@
 <!doctype html>
 <head>
-  <title>세탁물요금표</title>
+  <title>호치민 한인회 특별입국 공지사항</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
- </head>
- <body>
-<h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
- <div id="grid">
-   <ol>
-     <li><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></p></li>
-     <li><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></p></li>
-     <li><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></p></li>
-     <li><a href="4.html" title="청소, 환기 관련 안내입니다.">청소/환기</a></p></li>
-     <li><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></p></li>
-     <li><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></p></li>
-   </ol>
-     <div id="article">
 </head>
+<body>
+<header>
+<h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
+    <nav>
+      <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span>
+      <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span>
+      <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span>
+      <span><a href="4.html" title="청소, 환기 관련 안내입니다.">청소/환기</a></span>
+      <span><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></span>
+      <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
+    </nav>
+</header>
 <body>
 <h2>세탁물 관련</h2>
 <li>세탁물은 입실 3일 후 12시 부터 맡기실 수 있습니다.</li>
