--- a/2.html
+++ b/2.html
@@ -5,17 +5,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-<h1><a href="index.html" title="홈으로 가기">격리 공지</a></h1>
-    <nav>
-      <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span>
-      <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span>
-      <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span>
-      <span><a href="4.html" title="청소, 환기 관련 안내입니다.">청소/환기</a></span>
-      <span><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></span>
-      <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
-    </nav>
-</header>
+  <header>
+  <a href="index.html" title="홈으로 가기"><h1>공지사항</h1></a>
+      <nav>
+        <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span><a>/</a>
+        <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span><a>/</a>
+        <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span><a>/</a>
+        <span><a href="4.html" title="청소, 환기 관련 안내입니다.">청소,환기</a></span><a>/</a>
+        <span><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></span><a>/</a>
+        <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
+      </nav>
+  </header>
 <body><h2>식사제공 시간</h2>
 <li>아침식사 07시~09시 </li>
 <li>점심식사 12시~ 13시 </li>
