--- a/2.html
+++ b/2.html
@@ -21,7 +21,7 @@
 <li>점심식사 12시~ 13시 </li>
 <li>저녁 18시~19시 </li>
 <h2>전체식단</h2>
-  <table class="__se_tbl_ext" border="1" align="center" style="border-collapse: collapse; width: auto;">
+  <table class="__se_tbl_ext" border="1" align="center" style="border-collapse: collapse;">
 <tr>
     <th>일차</th><th>날짜</th><th>구분</th><th>메뉴</th><th>제공업체</th></tr>
   <td rowspan="3">1일차</td>
@@ -92,7 +92,7 @@
   <td rowspan="3">4/9</td><td>조식</td><td>호텔식</td><td>호텔</td></tr>
 <td>중식</td><td>유부초밥, 장국, 돈까스, 멸치볶음</td><td>대어</td></tr>
 <td>석식</td><td>감자탕, 닭강정, 생선, 계란말이, 김치</td><td>방도남</td></tr>
-<tr><
+<tr>
   <td rowspan="3">14일차</td>
   <td rowspan="3">4/10</td><td>조식</td><td>호텔식</td><td>호텔</td></tr>
 <td>중식</td><td>김밥, 시래기국, 고등어조림, 오이무침</td><td>대어</td></tr>
