delete menu breakfast

--- a/3.html
+++ b/3.html
@@ -7,14 +7,14 @@
 <body>
   <header>
   <a href="index.html" title="홈으로 가기"><h1>공지사항</h1></a>
-      <nav>
-        <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span><a>/</a>
-        <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span><a>/</a>
-        <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span><a>/</a>
-        <span><a href="4.html" title="청소, 환기 관련 안내입니다.">청소,환기</a></span><a>/</a>
-        <span><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></span><a>/</a>
-        <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
-      </nav>
+  <nav>
+    <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span><a>/</a>
+    <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span><a>/</a>
+    <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span><a>/</a>
+    <span><a href="4.html" title="청소, 환기 관련 안내입니다.">청소,환기</a></span><a>/</a>
+    <span><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></span><a>/</a>
+    <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
+  </nav>
   </header>
 <body>
 <h2>세탁물 관련</h2>
@@ -25,7 +25,7 @@
 <li>12시가 지나 세탁물을 꺼내어 두시면 3일뒤에 전달 됩니다. 시간대도 틀리게 전달 되오니 매일 정오에 맞추어 세탁 요청 하여주시면 호텔측에서도 혼선이 줄어들어 빠른 처리가 가능합니다.</li>
 <li>체크아웃전 날짜에 맞추어, 체크 아웃 3일 전부터는 세탁을 맡기지 말아 주세요.</li>
 <h2>세탁물 요금표</h2>
-<div style="text-align:center;">
-  <img src="loundry_price.png" style="max-width:100%;height:auto;">
+<div class="image-box">
+  <img src="loundry_price.png">
 </div>
 </body>
