--- a/1.html
+++ b/1.html
@@ -7,14 +7,14 @@
 <body>
   <header>
   <a href="index.html" title="홈으로 가기"><h1>공지사항</h1></a>
-      <nav>
-        <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span><a>/</a>
-        <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span><a>/</a>
-        <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span><a>/</a>
-        <span><a href="4.html" title="청소, 환기 관련 안내입니다.">청소,환기</a></span><a>/</a>
-        <span><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></span><a>/</a>
-        <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
-      </nav>
+  <nav>
+    <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span><a>/</a>
+    <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span><a>/</a>
+    <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span><a>/</a>
+    <span><a href="4.html" title="청소, 환기 관련 안내입니다.">청소,환기</a></span><a>/</a>
+    <span><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></span><a>/</a>
+    <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
+  </nav>
   </header>
 <h2>서류 작성 방법</h2>
 <li>각방에 온도계와 작성 서류(만약 없다면, 로비에 요청하여 주세요)가 준비되어 있습니다. 매일 열을 체크하여 주시고 해당 문서에 기록해 주세요. 체크 아웃시에 이 문서를 제출하여야 격리 해제 됩니다. 혹시 온도계가 없으신 분들은 리셉션에 요청해 주세요.</li>
@@ -23,5 +23,6 @@
   <img src="doc1.jpg" style="max-width:100%;height:auto;">
     <img src="doc2.jpg" style="max-width:100%;height:auto;">
       <img src="doc3.jpg" style="max-width:100%;height:auto;">
+          <img src="doc4.png" style="max-width:100%;height:auto;">
 </div>
 </body>
