--- a/2.html
+++ b/2.html
@@ -7,20 +7,31 @@
 <body>
   <header>
   <a href="index.html" title="홈으로 가기"><h1>공지사항</h1></a>
-      <nav>
-        <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span><a>/</a>
-        <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span><a>/</a>
-        <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span><a>/</a>
-        <span><a href="4.html" title="청소, 환기 관련 안내입니다.">청소,환기</a></span><a>/</a>
-        <span><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></span><a>/</a>
-        <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
-      </nav>
+  <nav>
+    <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span><a>/</a>
+    <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span><a>/</a>
+    <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span><a>/</a>
+    <span><a href="4.html" title="청소, 환기 관련 안내입니다.">청소,환기</a></span><a>/</a>
+    <span><a href="5.html" title="격리와 관련된 규정들에 대한 안내입니다.">격리규정</a></span><a>/</a>
+    <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
+  </nav>
   </header>
-<body><h2>식사제공 시간</h2>
-<li>아침식사 07시~09시 </li>
-<li>점심식사 12시~ 13시 </li>
-<li>저녁 18시~19시 </li>
-<h2>전체식단</h2>
+<body>
+  <h2>호텔식 주문 방법</h2>
+    <li>호텔조식은 방안에 놓인 메뉴를 보고 선택해서 전날 08:00 전까지 문앞 의자에 두면 직원이 수거해 갑니다.</li>
+    <li>14일 조식은 일괄적으로 샌드위치 적용</li>
+    <li>선택 메뉴가 없을시에는 호텔에서 임의적으로 메뉴를 지정해서 제공합니다.</li>
+    <li>메뉴 선택시 영어로만 작성하셔야 합니다.</li>
+    <li>중식과 석식은 한식도시락 진행됩니다. 따로 기재하실 필요 없습니다.</li>
+    <li>아침 메뉴는 요일마다 다른 메뉴를 확인해 주세요.</li>
+    <li>아시안 메뉴 / 웨스턴 메뉴 - 택 1</li>
+    <li>메뉴의 고유번호와 음료등을 체크박스에 체크하여 주세요.
+    <li>2인이상일 경우에도 오더지 한장에 다 작성해주세요.(유아제외).
+  <h2>식사제공 시간</h2>
+    <li>아침식사 07시~09시 </li>
+    <li>점심식사 12시~ 13시 </li>
+    <li>저녁 18시~19시 </li>
+  <h2>전체식단</h2>
   <table class="__se_tbl_ext" border="1" align="center" style="border-collapse: collapse;">
 <tr>
     <th>일차</th><th>날짜</th><th>구분</th><th>메뉴</th><th>제공업체</th></tr>
@@ -34,7 +45,7 @@
   <td>조식</td><td>호텔식</td><td>호텔</td></tr>
 <tr>
 <td>중식</td><td>낙지볶음, 콩나물국, 버섯탕수육, 브로컬리, 단호박셀러드, 김치</td><td>아리랑</td></tr>
-<td>석식</td><td>커레라이스, 단무지무침, 장아찌, 양상추샐러드, 냉국</td><td>최고집</td></tr>
+<td>석식</td><td>카레라이스, 단무지무침, 장아찌, 양상추샐러드, 냉국</td><td>최고집</td></tr>
 <tr>
   <td rowspan="3">3일차</td>
   <td rowspan="3">3/30</td>
@@ -101,8 +112,4 @@
   <td rowspan="3">15일차</td>
   <td rowspan="3">4/11</td><td>조식</td><td>호텔식</td><td>호텔</td></tr>
 </table>
-<a href="https://www.notion.so/vvookk/8c460cfea3bc464fac71072b714cf5a4" target="_blank" title="호텔 조식 신청 방법"></a>
-<p><div style="text-align:center;">
-    <img src="menu.png" style="max-width:100%;height:auto;">
-  </div>
 </body>
