--- a/2.html
+++ b/2.html
@@ -26,7 +26,7 @@
     <li>아침 메뉴는 요일마다 다른 메뉴를 확인해 주세요.</li>
     <li>아시안 메뉴 / 웨스턴 메뉴 - 택 1</li>
     <li>메뉴의 고유번호와 음료등을 체크박스에 체크하여 주세요.
-    <li>2인이상일 경우에도 오더지 한장에 다 작성해주세요.(유아제외).
+    <li>개인별 주문지를 작성해 주세요. 한 객실에 2인이라면 2장이 작성되어야 합니다.</li>
   <h2>식사제공 시간</h2>
     <li>아침식사 07시~09시 </li>
     <li>점심식사 12시~ 13시 </li>
