--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>호치민 한인회 특별입국 공지사항</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
 <header>
@@ -16,9 +16,14 @@
   <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
 </nav>
 </header>
-      <h2>체크인시에는 요청사항이 많아, 호텔 측의 빠른 대응이 어렵습니다. 요청사항은 호텔에서 순차적으로 정해드릴 예정이니 잠시 후 다시 요청 부탁드립니다.</h2>
-          <h2>객실에 준비된 스낵 박스는 격리기간 동안 부식으로 드실 수 있게 한인회에서 제공 하였습니다.</h2><p style="margin-top:45px;"></p><p>
-              <h2>화재 경보 시스템으로 담배 연기가 화재로 인식(절대금연-화재경보시 대피절차 진행시 격리기간에 지장이 있을 수 있습니다.)흡연하신 방은 체크 아웃시 적발될 경우 데이당 300만동으로 계산하여, 전체 숙박기간동안(15일 총 4500만동)의 벌금이 부과될 수 있습니다. 이부분 꼭 숙지하여 주시기 바랍니다.</h2></p>
+<span style=" font: italic bold 1.8em/1em Georgia, serif ; color:navy;">
+<p>체크인시에는 요청사항이 많아, 호텔 측의 빠른 대응이 어렵습니다.</p>
+<p>요청사항은 호텔에서 순차적으로 정해드릴 예정이니 잠시 후 다시 요청 부탁드립니다.</p>
+<p>객실에 준비된 스낵 박스는 격리기간 동안 부식으로 드실 수 있게 한인회에서 제공 하였습니다.</p>
+<p>화재 경보 시스템으로 담배 연기가 화재로 인식(절대금연-화재경보시 대피절차 진행시 격리기간에 지장이 있을 수 있습니다.)</p>
+<p>흡연하신 방은 체크 아웃시 적발될 경우 데이당 300만동으로 계산하여, 전체 숙박기간동안(15일 총 4500만동)의 벌금이 부과될 수 있습니다. 
+<p>이부분 꼭 숙지하여 주시기 바랍니다.</p>
+</span>
 <h2>와이파이 이용법</h2>
 <h3>1. 방법1</h3>
 <li>Ihg connect 연결</li>
