meal order sample img added

--- a/2.html
+++ b/2.html
@@ -27,10 +27,12 @@
     <li>아시안 메뉴 / 웨스턴 메뉴 - 택 1</li>
     <li>메뉴의 고유번호와 음료등을 체크박스에 체크하여 주세요.
     <li>개인별 주문지를 작성해 주세요. 한 객실에 2인이라면 2장이 작성되어야 합니다.</li>
-  <h2>식사제공 시간</h2>
-    <li>아침식사 07시~09시 </li>
-    <li>점심식사 12시~ 13시 </li>
-    <li>저녁 18시~19시 </li>
+    <h2>호텔식 주문 양식 샘플</h2>
+      <img src="meal_order_sample.jpeg" style="max-width:100%;height:auto;">
+    <h2>식사제공 시간</h2>
+      <li>아침식사 07시~09시 </li>
+      <li>점심식사 12시~ 13시 </li>
+      <li>저녁 18시~19시 </li>
   <h2>전체식단</h2>
   <table class="__se_tbl_ext" border="1" align="center" style="border-collapse: collapse;">
 <tr>
