--- a/2.html
+++ b/2.html
@@ -28,6 +28,7 @@
     <li>메뉴의 고유번호와 음료등을 체크박스에 체크하여 주세요.
     <li>개인별 주문지를 작성해 주세요. 한 객실에 2인이라면 2장이 작성되어야 합니다.</li>
     <h2>호텔식 주문 양식 샘플</h2>
+    <li>아래 주문서를 참고하여 이름과 방번호, 날짜를 기입하시고 체크박스에 체크해주세요.</li>
       <img src="meal_order_sample.jpeg" style="max-width:100%;height:auto;">
     <h2>식사제공 시간</h2>
       <li>아침식사 07시~09시 </li>
