--- a/6.html
+++ b/6.html
@@ -19,7 +19,7 @@
 <body>
   <h2>요청사항</h2>
   <li><a><strong>수다/공지 단톡방은 실시간 모니터링을 하지 않습니다.</a></strong></li>
-  <li>문의 사항은 <a href="http://pf.kakao.com/_NxosKK"><strong>카카오 채널</strong></a> 격리 문의 채널을 이용하여 주세요.</li>
+  <li>문의 사항은 <a href ="http://pf.kakao.com/_NxosKK"><strong><u>카카오 채널</u></strong></a>격리 문의 채널을 이용하여 주세요.</li>
   <li>객실내의 시설물이 작동하지 않거나 문제가 있을 경우 호텔에 요청하시면 판단하여 수리 또는 객실변경이 진행됩니다.</li>
   <li>빗.칫솔.면도기.샤워헤어캡, 슬리퍼 등은 로비에 요청하여야 합니다.</li>
   <li>그랩등의 배달 어플을 통한 물품 수령은 객실당 하루 2회로 확인 하였습니다. 이는 호텔측에서 고객 편의를 위해 제공하는 서비스이나, 보건당국의 지침에 따라 사전 안내 없이 중단될 수 있습니다.</li>
