--- a/1.html
+++ b/1.html
@@ -23,6 +23,7 @@
   <img src="doc1.jpg" style="max-width:100%;height:auto;">
     <img src="doc2.jpg" style="max-width:100%;height:auto;">
       <img src="doc3.jpg" style="max-width:100%;height:auto;">
+        <img src="doc5.png" style="max-width:100%;height:auto;">
           <img src="doc4.png" style="max-width:100%;height:auto;">
 </div>
 </body>
