--- a/2.html
+++ b/2.html
@@ -19,12 +19,12 @@
 <body>
   <h2>호텔식 주문 방법</h2>
     <li>호텔조식은 방안에 놓인 메뉴를 보고 선택해서 전날 08:00 전까지 문앞 의자에 두면 직원이 수거해 갑니다.</li>
-    <li>14일 조식은 일괄적으로 샌드위치 적용</li>
+    <li>29일 조식은 ᆮᆲᆭᆱ123ᆭᆲ21ᆱᆮᆭ1ᆲᆱ21ᆭᆲᆱ12ᆭᆲᆱ</li>
     <li>선택 메뉴가 없을시에는 호텔에서 임의적으로 메뉴를 지정해서 제공합니다.</li>
     <li>메뉴 선택시 영어로만 작성하셔야 합니다.</li>
     <li>중식과 석식은 한식도시락 진행됩니다. 따로 기재하실 필요 없습니다.</li>
     <li>아침 메뉴는 요일마다 다른 메뉴를 확인해 주세요.</li>
-    <li>아시안 메뉴 / 웨스턴 메뉴 - 택 1</li>
+    <li>아시안 메뉴 / 웨스턴 메뉴 / 채식 메뉴 - 택 1</li>
     <li>메뉴의 고유번호와 음료등을 체크박스에 체크하여 주세요.
     <li>개인별 주문지를 작성해 주세요. 한 객실에 2인이라면 2장이 작성되어야 합니다.</li>
     <h2>호텔식 주문 양식 샘플</h2>
