--- a/2.html
+++ b/2.html
@@ -19,7 +19,7 @@
 <body>
   <h2>호텔식 주문 방법</h2>
     <li>호텔조식은 방안에 놓인 메뉴를 보고 선택해서 전날 08:00 전까지 문앞 의자에 두면 직원이 수거해 갑니다.</li>
-    <li>29일 조식은 ᆮᆲᆭᆱ123ᆭᆲ21ᆱᆮᆭ1ᆲᆱ21ᆭᆲᆱ12ᆭᆲᆱ</li>
+    <li>사전 예약이 불가한 29일 조식은 일괄 토스트, 스크램블에그, 소시지, 토마토의 웨스턴으로 제공됩니다.</li>
     <li>선택 메뉴가 없을시에는 호텔에서 임의적으로 메뉴를 지정해서 제공합니다.</li>
     <li>메뉴 선택시 영어로만 작성하셔야 합니다.</li>
     <li>중식과 석식은 한식도시락 진행됩니다. 따로 기재하실 필요 없습니다.</li>
