--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <header>
 <a href="index.html" title="홈으로 가기"><h1>공지사항</h1></a>
 <nav>
+  <span><a href="0.html" title="수다방 운영 안내입니다.">수다방</a></span><a>/</a>
+  <span><a href="00.html" title="체크아웃관련 안내입니다.">체크아웃</a></span><a>/</a>
   <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span><a>/</a>
   <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span><a>/</a>
   <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span><a>/</a>
@@ -24,6 +26,11 @@
 <p>흡연하신 방은 체크 아웃시 적발될 경우 데이당 300만동으로 계산하여, 전체 숙박기간동안(15일 총 4500만동)의 벌금이 부과될 수 있습니다.
 <p>이부분 꼭 숙지하여 주시기 바랍니다.</p>
 </span>
+<h2>식사취소</h2>
+<li>4/18 12시까지 접수</li>
+<li>4/20 중식부터 취소 반영</li>
+<li>총 18회 취소 </li>
+<li>VND / 110,000동 18회 1,980,000동 또는 KRW / 5,500원 18회 99,000원</li>
 <h2>와이파이 이용법</h2>
 <h3>1. 방법1</h3>
 <li>Ihg connect 연결</li>
