--- a/0.html
+++ b/0.html
@@ -18,14 +18,12 @@
     <span><a href="6.html" title="요청사항에 대한 안내입니다.">요청사항</a></span>
   </nav>
   </header>
-<h2>서류 작성 방법</h2>
-<li>각방에 온도계와 작성 서류(만약 없다면, 로비에 요청하여 주세요)가 준비되어 있습니다. 매일 열을 체크하여 주시고 해당 문서에 기록해 주세요. 체크 아웃시에 이 문서를 제출하여야 격리 해제 됩니다. 혹시 온도계가 없으신 분들은 리셉션에 요청해 주세요.</li>
-  <li>온도계는 퇴실시 로비 카운터에 제출하셔야 하며, 파손이나 분실시 고객이 변상하셔야 합니다.</li>
-<div style="text-align:center;">
-  <img src="doc1.jpg" style="max-width:100%;height:auto;">
-    <img src="doc2.jpg" style="max-width:100%;height:auto;">
-      <img src="doc3.jpg" style="max-width:100%;height:auto;">
-        <img src="doc5.png" style="max-width:100%;height:auto;">
-          <img src="doc4.png" style="max-width:100%;height:auto;">
-</div>
+<body>
+<h2>수다방 운영 안내</h2>
+<li>07:00~21:00 이용시간을 지켜주세요. 단 위급 사항시는 제외</li>
+<li>상호 비방 및 욕설 및 간접광고 등을 금지해 주세요</li>
+<li>공지후 모든 격리자가 확인할수 있도록 30분간 수다방 이용을 자제해 주세요. 메시지 삭제조치 예정입니다.</li>
+<li>방장은 수다방 실시간 모니터를 하지 않습니다, 호텔 또는 한인회 공지할 내용이 있을시 공지만 하고있습니다.</li>
+<li>문의/요청/건의/불만 사항은 수다방이 아닌 격리상담 채널로 문의해 주세요</li>
+<li><a href ="http://pf.kakao.com/_NxosKK"><strong><u>카카오 채널</u></strong></a>[월~금 10:00~17:00 상담시간 (공휴일 제외)]</li>
 </body>
