--- a/2.html
+++ b/2.html
@@ -8,6 +8,8 @@
   <header>
   <a href="index.html" title="홈으로 가기"><h1>공지사항</h1></a>
   <nav>
+    <span><a href="0.html" title="수다방 운영 안내입니다.">수다방</a></span><a>/</a>
+    <span><a href="00.html" title="체크아웃관련 안내입니다.">체크아웃</a></span><a>/</a>
     <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span><a>/</a>
     <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span><a>/</a>
     <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span><a>/</a>
@@ -18,8 +20,8 @@
   </header>
 <body>
   <h2>호텔식 주문 방법</h2>
-    <li>호텔조식은 방안에 놓인 메뉴를 보고 선택해서 전날 08:00 전까지 문앞 의자에 두면 직원이 수거해 갑니다.</li>
-    <li>사전 예약이 불가한 29일 조식은 일괄 토스트, 스크램블에그, 소시지, 토마토의 웨스턴으로 제공됩니다.</li>
+    <li>호텔조식은 방안에 놓인 메뉴를 보고 선택해서 전날 07:30 전까지 문앞 의자에 두면 직원이 수거해 갑니다.</li>
+    <li>사전 예약이 불가한 15일 조식은 일괄 베트남 베이커리, 잼, 버터, 베트남 블랙커피 등의 웨스턴으로 제공됩니다.</li>
     <li>선택 메뉴가 없을시에는 호텔에서 임의적으로 메뉴를 지정해서 제공합니다.</li>
     <li>메뉴 선택시 영어로만 작성하셔야 합니다.</li>
     <li>중식과 석식은 한식도시락 진행됩니다. 따로 기재하실 필요 없습니다.</li>
@@ -28,8 +30,7 @@
     <li>메뉴의 고유번호와 음료등을 체크박스에 체크하여 주세요.
     <li>개인별 주문지를 작성해 주세요. 한 객실에 2인이라면 2장이 작성되어야 합니다.</li>
     <h2>호텔식 주문 양식 샘플</h2>
-    <li>아래 주문서를 참고하여 이름과 방번호, 날짜를 기입하시고 체크박스에 체크해주세요.</li>
-      <img src="meal_order_sample.jpeg" style="max-width:100%;height:auto;">
+    <li>객실에 준비된 주문서를 참고하여 이름과 방번호, 날짜를 기입하시고 제출해주세요.</li>
     <h2>식사제공 시간</h2>
       <li>아침식사 07시~09시 </li>
       <li>점심식사 12시~ 13시 </li>
