--- a/3.html
+++ b/3.html
@@ -8,6 +8,8 @@
   <header>
   <a href="index.html" title="홈으로 가기"><h1>공지사항</h1></a>
   <nav>
+    <span><a href="0.html" title="수다방 운영 안내입니다.">수다방</a></span><a>/</a>
+    <span><a href="00.html" title="체크아웃관련 안내입니다.">체크아웃</a></span><a>/</a>
     <span><a href="1.html" title="퇴실시 제출할 서류의 작성법입니다.">서류작성</a></span><a>/</a>
     <span><a href="2.html" title="격리기간 제공 되는 식단입니다.">전체식단</a></span><a>/</a>
     <span><a href="3.html" title="추가 세탁물의 요금입니다.">세탁요금</a></span><a>/</a>
