--- a/2.html
+++ b/2.html
@@ -21,6 +21,7 @@
 <body>
   <h2>호텔식 주문 방법</h2>
     <li>호텔조식은 방안에 놓인 메뉴를 보고 선택해서 전날 07:30 전까지 문앞 의자에 두면 직원이 수거해 갑니다.</li>
+    <li>주문한 호텔조식이 다른 메뉴가 배달되거나 8시 이후에도 조식배달이 안될시 로비에 요청해 주세요.</li>
     <li>사전 예약이 불가한 15일 조식은 일괄 베트남 베이커리, 잼, 버터, 베트남 블랙커피 등의 웨스턴으로 제공됩니다.</li>
     <li>선택 메뉴가 없을시에는 호텔에서 임의적으로 메뉴를 지정해서 제공합니다.</li>
     <li>메뉴 선택시 영어로만 작성하셔야 합니다.</li>
