--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <p>이부분 꼭 숙지하여 주시기 바랍니다.</p>
 </span>
 <h2>식사취소</h2>
-<li>4/18 12시까지 접수</li>
-<li>4/20 중식부터 취소 반영</li>
+<li><strong>5/4 12시까지 접수</strong></li>
+<li>5/6 중식부터 취소 반영</li>
 <li>총 18회 취소 </li>
 <li>VND / 110,000동 18회 1,980,000동 또는 KRW / 5,500원 18회 99,000원</li>
-<li>문의 사항은 <a href ="https://forms.gle/ykN1VX3oXsDgQzVX8"><strong><u>식사 취소</u></strong></a>격리 문의 채널을 이용하여 주세요.</li>
+<li>문의 사항은 <a href ="https://forms.gle/xYgtqvP6mtfGXfpH6"><strong><u>식사 취소</u></strong></a>격리 문의 채널을 이용하여 주세요.</li>
 
 <h2>와이파이 이용법</h2>
 <h3>1. 방법1</h3>
